Add edit label feature with bottom sheet UI and update label functionality